--- a/web/index.html
+++ b/web/index.html
@@ -13,5 +13,8 @@
     <p>Citizens' Climate Lobby empowers ordinary people to make their voice heard on climate change. We're the Silicon Valley East local chapter, representing Fremont, Newark, Union City, Milpitas, and surrounding areas.</p>
     <p>Join us on <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/">Meetup</a> to see our chapter meetings.</p>
     <p>Want to help right now?  Take action in 5 minutes for climate solutions: <a href="http://cclusa.org/senate">cclusa.org/senate</a>.</p>
+  <h3>our Social Media Links:</h3>
+     <p><a href="https://www.instagram.com/cclsve/">Instagram</a></p>
+     <p><a href="https://www.facebook.com/CCLSVE/">Facebook</a></p> 
   </body>
 </html>
