add some styles.  this is definitely not what I want it to look like yet.

--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,16 @@
       <h1>Citizens' Climate Lobby</h1>
       <h2>Silicon Valley East</h2>
     </div>
-    <img src="chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
-    <p>Citizens' Climate Lobby empowers ordinary people to make their voice heard on climate change. We're the Silicon Valley East local chapter, representing Fremont, Newark, Union City, Milpitas, and surrounding areas.</p>
-    <p>Join us on <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/">Meetup</a> to see our chapter meetings. We're friendly!</p>
-    <p>Want to help right now?  Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
-  <h3>our Social Media Links:</h3>
-     <p><a href="https://www.instagram.com/cclsve/">Instagram</a></p>
-     <p><a href="https://www.facebook.com/CCLSVE/">Facebook</a></p> 
+    <div class="picture-frame">
+      <img src="chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
+    </div>
+    <div class="body-text">
+      <p>Citizens' Climate Lobby empowers ordinary people to make their voice heard on climate change. We're the Silicon Valley East local chapter, representing Fremont, Newark, Union City, Milpitas, and surrounding areas.</p>
+      <p>Join us on <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/">Meetup</a> to see our chapter meetings. We're friendly!</p>
+      <p>Want to help right now?  Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
+      <h3>Our Social Media Links:</h3>
+        <p><a href="https://www.instagram.com/cclsve/">Instagram</a></p>
+        <p><a href="https://www.facebook.com/CCLSVE/">Facebook</a></p>
+    </div>
   </body>
 </html>
