--- a/web/index.html
+++ b/web/index.html
@@ -18,9 +18,16 @@
     </div>
     <div class="body-text">
       <p>Want to help right now?  Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
-      <h3>Our Social Media Links:</h3>
-        <p><a href="https://www.instagram.com/cclsve/">Instagram</a></p>
-        <p><a href="https://www.facebook.com/CCLSVE/">Facebook</a></p>
+      <div class="media"> Find us on Social Media: </div>
+     <li>
+       <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
+        <ion-icon name="logo-facebook"></ion-icon></a>
+       <a class="inst-icon" href="https://www.instagram.com/cclsve/" target="_blank">
+	<ion-icon name="logo-instagram"></ion-icon></a>
+    </li>
+
+   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </div>
   </body>
 </html>
