add remaining links from linktree, make call-to-action more salient, un-italicize social media header, remove unused stiles

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,12 @@
       </div>
     </div>
     <div class="body-text">
-      <p>Want to help right now?  Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
+      <div class="call-to-action">
+        <h3>Want to help right now?</h3>
+        </p>Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
+      </div>
+      <p>Volunteer web portal: <a href="https://community.citizensclimate.org/">community.citizensclimate.org</a></p>
+      <p>California election information: <a href="http://vote.ca.gov/">vote.ca.gov</a></p>
       <div class="social-media">
         <p>
           <span class="media"> Find us on Social Media: </span>
