--- a/web/index.html
+++ b/web/index.html
@@ -22,22 +22,24 @@
         <h3>Want to help right now?</h3>
         </p>Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
       </div>
-      <p>Volunteer web portal: <a href="https://community.citizensclimate.org/">community.citizensclimate.org</a></p>
-      <p>California election information: <a href="http://vote.ca.gov/">vote.ca.gov</a></p>
-      <div class="social-media">
-        <p>
-          <span class="media"> Find us on Social Media: </span>
-        </p>
-        <p>
-       <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
-         <ion-icon name="logo-facebook"></ion-icon>
-       </a>
-       <a class="inst-icon" href="https://www.instagram.com/cclsve/" target="_blank">
-	       <ion-icon name="logo-instagram"></ion-icon></a>
-        </p>
-
-   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <div class="other-resources">
+        <h3>Other resources</h3>
+        <p>Volunteer web portal: <a href="https://community.citizensclimate.org/">community.citizensclimate.org</a></p>
+        <p>California election information: <a href="http://vote.ca.gov/">vote.ca.gov</a></p>
+        <div class="social-media">
+          <p>
+            <span class="media"> Find us on Social Media: </span>
+          </p>
+          <p>
+          <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
+            <ion-icon name="logo-facebook"></ion-icon>
+          </a>
+          <a class="inst-icon" href="https://www.instagram.com/cclsve/" target="_blank">
+            <ion-icon name="logo-instagram"></ion-icon></a>
+          </p>
+          <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+          <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        </div>
       </div>
     </div>
   </body>
