hide Other resources section header, add another hidden header for accessibility, fix tag error

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
       <h1>Citizens' Climate Lobby</h1>
       <h2>Silicon Valley East</h2>
     </div>
+    <h3 class="visually-hidden">Introduction</h3>
     <div class="picture-frame">
       <img src="chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
       <div class="picture-adjacent">
@@ -20,10 +21,10 @@
     <div class="body-text">
       <div class="call-to-action">
         <h3>Want to help right now?</h3>
-        </p>Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
+        <p>Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
       </div>
       <div class="other-resources">
-        <h3>Other resources</h3>
+        <h3 class="visually-hidden">Other resources</h3>
         <p>Volunteer web portal: <a href="https://community.citizensclimate.org/">community.citizensclimate.org</a></p>
         <p>California election information: <a href="http://vote.ca.gov/">vote.ca.gov</a></p>
         <div class="social-media">
