added five levers headers

--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -11,5 +11,10 @@
     </div>
     <h3 class="visually-hidden">Introduction</h3>
     <p>CCL groups our organizing activities into five "levers" of political will.</p>
+    <h3>Lobbying Congress</h3>
+    <h3>Media relations</h3>
+    <h3>Grassroots outreach</h3>
+    <h3>Grasstops outreach</h3>
+    <h3>Chapter development</h3>
   </body>
 </html>
