--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
       <h2>Silicon Valley East</h2>
     </div>
     <h3 class="visually-hidden">Introduction</h3>
-    <div class="picture-frame">
-      <img src="chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
+    <div class="picture-frame picture-frame-left">
+      <img src="images/chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
       <div class="picture-adjacent">
         <p><a href="https://citizensclimatelobby.org/">Citizens' Climate Lobby</a> empowers ordinary people to make their voice heard on climate change.  We're the Silicon Valley East local chapter, representing Fremont, Newark, Union City, Milpitas, and surrounding areas.</p>
         <p>We meet monthly on the second Saturday at 4 PM.  Due to the pandemic, our meetings are all currently virtual. Join us on <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/">Meetup</a> for call-in information.  We're friendly!</p>
