add IDs to lever headings so that we can fragment-link to them

--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -18,7 +18,7 @@
       </div>
       <div class="section">
         <div class="section-intro">
-          <h3>Lobbying Congress</h3>
+          <h3 id="lobbying">Lobbying Congress</h3>
           <p>CCL is all about building relationships, and it even empowers us to build relationships with our members of Congress!</p>
         </div>
         <div class="picture-frame picture-frame-left">
@@ -36,7 +36,7 @@
       </div>
       <div class="section">
         <div class="section-intro">
-          <h3>Media relations</h3>
+          <h3 id="media">Media relations</h3>
         </div>
         <div class="picture-frame picture-frame-left">
           <img src="images/lte.jpg" alt="a section of a newspaper showing a letter to the editor entitled Price on Carbon must be part of this year's climate legislation"/>
@@ -55,7 +55,7 @@
       </div>
       <div class="section">
         <div class="section-intro">
-          <h3>Grassroots outreach</h3>
+          <h3 id="grassroots">Grassroots outreach</h3>
         </div>
         <div class="picture-frame picture-frame-left">
           <img src="images/tabling_hayward.jpg" alt="two women wearing face coverings standing behind a table that has a sign that says 'Solve Climate Change' and a tablecloth that says 'Citizens Climate'"/>
@@ -78,7 +78,7 @@
       </div>
       <div class="section">
         <div class="section-intro">
-          <h3>Grasstops outreach</h3>
+          <h3 id="grasstops">Grasstops outreach</h3>
         </div>
         <div class="picture-frame picture-frame-right">
           <img src="images/endorsement_request.png" alt="screenshot showing text of an email proposing that a city endorses climate legislation"/>
@@ -89,7 +89,7 @@
       </div>
       <div class="section">
         <div class="section-intro">
-          <h3>Chapter development</h3>
+          <h3 id="chapter">Chapter development</h3>
           <p>We meet monthly on the 2nd Saturday of the month at 4 PM.  We offer an orientation for new members at 3:30 PM before every chapter meeting.</p>
         </div>
         <div class="picture-frame picture-frame-left">
