Add header to five levers page.  This should eventually go on all pages, but we are putting it here to test it out.

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <div class="page-header">
+    <div class="page-title">
       <h1>Citizens' Climate Lobby</h1>
       <h2>Silicon Valley East</h2>
     </div>
