use page-specific title on five levers page

--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -22,8 +22,7 @@
       </div>
     </div>
     <div class="page-title">
-      <h1>Citizens' Climate Lobby</h1>
-      <h2>Silicon Valley East</h2>
+      <h1>Five Levers</h1>
     </div>
     <div class="page-content">
       <div class="section">
