add header to homepage

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,22 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
+    <div class="page-header">
+      <div class="header-inside">
+        <div class="header-left header-content">
+          <a href="/"><img src="images/cclsve_logo.png" alt="logo with text saying Silicon Valley East under stylized letters CCL"/></a>
+          <div class="menu">
+            <ul>
+              <li><a class="current" href="/">Home</a></li>
+              <li><a href="/five-levers">Five Levers</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="header-right header-content">
+          <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
+        </div>
+      </div>
+    </div>
     <div class="page-title">
       <h1>Citizens' Climate Lobby</h1>
       <h2>Silicon Valley East</h2>
