--- a/web/elections.html
+++ b/web/elections.html
@@ -15,7 +15,7 @@
 	
       <p> At CCL we strive to develop relationships with the people who represent us in government, and often call and write their offices to keep climate change at the top of their minds.</p>
     <div class="upcoming">
-      <img src="pic/Vote-zoom.jpg" id="image-vote" alt="Four people on a zoom screen, holding the letters V,O,T and E"/>   
+      <img src="images/Vote-zoom.jpg" id="image-vote" alt="Four people on a zoom screen, holding the letters V,O,T and E"/>   
       <h3 span style="color:#5A7931;"> Upcoming Elections</h3>   
       <p> The <a href="https://www.sos.ca.gov/elections/upcoming-elections/primary-election-june-7-2022" target="_blank" rel="noopener noreferrer">next statewide election</a> is the statewide direct primary on June 7, 2022.  Deadline for <a href= "https://registertovote.ca.gov" target="_blank" rel="noopener noreferrer">registering</a> is May 23, 2022.</p>
       <p> More information at the California Secretary of State Website: <a href="https://www.sos.ca.gov/elections" target="_blank" rel="noopener noreferrer">sos.ca.gov/elections</a></p>
@@ -50,12 +50,12 @@
     <div class="redist-maps">
       	<div class="picture-map-now">
        	 <h4 style="text-align:center;">Current map </h4>    
-         <img src="pic/CA-15-map.jpg" id="image-now" alt="map of current boundaries of CA17 and 15"/>
+         <img src="images/CA-15-map.jpg" id="image-now" alt="map of current boundaries of CA17 and 15"/>
      	 </div> <!--picture-map-now-->   
       
  		<div class="picture-map-2022">
      	 <h4 style="text-align:center;">Redistricted map </h4>
-     	 <img src="pic/CA-14-map.jpg" id="image-2022" alt="map of future boundaries of CA17 and 14"/>
+     	 <img src="images/CA-14-map.jpg" id="image-2022" alt="map of future boundaries of CA17 and 14"/>
     	</div> <!--picture-map-2022-->     
    </div> <!--redist-maps-->
  </div> <!-- page-rest-->
