--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -13,6 +13,7 @@
             <ul>
               <li><a href="/">Home</a></li>
               <li><a class="current" href="/five-levers">Five Levers</a></li>
+              <li><a href="/elections">Elections</a></li>
             </ul>
           </div>
         </div>
