--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
             <ul>
               <li><a class="current" href="/">Home</a></li>
               <li><a href="/five-levers">Five Levers</a></li>
+              <li><a href="/elections">Elections</a></li>
             </ul>
           </div>
         </div>
