--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,8 @@
       <div class="header-inside">
         <div class="header-left header-content">
           <a href="/"><img src="images/cclsve_logo.png" alt="logo with text saying Silicon Valley East under stylized letters CCL"/></a>
+          <input class="toggle-menu visually-hidden" id="toggle-menu" type="checkbox"/>
+          <label class="button-toggle-menu narrow-menu" for="toggle-menu"><ion-icon name="menu-outline"/></label>
           <div class="menu">
             <ul>
               <li><a class="current" href="/">Home</a></li>
@@ -18,7 +20,7 @@
           </div>
         </div>
         <div class="header-right header-content">
-          <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
+          <div class="button wide-menu"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
         </div>
       </div>
     </div>
