include ionicons script reference on five-levers page so menu icon will show up

--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -5,6 +5,9 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
     <div class="page-header">
       <div class="header-inside">
         <div class="header-left header-content">
