move join button inside the menu so that it appears on both desktop and mobile

--- a/web/index.html
+++ b/web/index.html
@@ -7,20 +7,20 @@
   <body>
     <div class="page-header">
       <div class="header-inside">
-        <div class="header-left header-content">
+        <div class="header-content">
           <a href="/"><img src="images/cclsve_logo.png" alt="logo with text saying Silicon Valley East under stylized letters CCL"/></a>
           <input class="toggle-menu visually-hidden" id="toggle-menu" type="checkbox"/>
           <label class="button-toggle-menu narrow-menu" for="toggle-menu"><ion-icon name="menu-outline"/></label>
           <div class="menu">
-            <ul>
+            <ul class="header-left header-side">
               <li><a class="current" href="/">Home</a></li>
               <li><a href="/five-levers">Five Levers</a></li>
               <li><a href="/elections">Elections</a></li>
             </ul>
+            <div class="header-right header-side">
+              <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
+            </div>
           </div>
-        </div>
-        <div class="header-right header-content">
-          <div class="button wide-menu"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
         </div>
       </div>
     </div>
