--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -3,6 +3,7 @@
   <head>
     <title>CCL SVE: Five Levers</title>
     <link href="main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
