Add a minor comment to test refreshing

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
     <div class="page-title">
       <h1>Citizens' Climate Lobby</h1>
       <h2>Silicon Valley East</h2>
-    </div>
+    </div><!-- page-title -->
     <h3 class="visually-hidden">Introduction</h3>
     <div class="picture-frame picture-frame-left">
       <img src="images/chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
