--- a/web/elections.html
+++ b/web/elections.html
@@ -30,8 +30,9 @@
      <h1>Legislative Information</h1>
   </div>
   
-  <div class='page-rest'>  
+  <h3 class="visually-hidden">Introduction</h3> 
 	
+   <div class=page-main-election> 
       <p> At CCL we strive to develop relationships with the people who represent us in government, and often call and write their offices to keep climate change at the top of their minds.</p>
     <div class="upcoming">
       <img src="images/Vote-zoom.jpg" id="image-vote" alt="Four people on a zoom screen, holding the letters V,O,T and E"/>   
