--- a/web/elections.html
+++ b/web/elections.html
@@ -47,7 +47,7 @@
         <p> You can find your current Representative here: <a href="https://www.house.gov/representatives/find-your-representative" target="_blank" rel="noopener noreferrer"> house.gov/representatives/find-your-representative</a>.  Or you can go to CCL's take-action link: <a href= "https://community.citizensclimate.org/tools/write-congress-about-the-energy-innovation-and-carbon-dividend-act#/74/" target="_blank" rel="noopener noreferrer">cclusa.org/write</a>  and enter your address there.</p>  	    	
     </div><!--redistricting-->
      
-    <div class="MOC-list">  
+    <div class="MOC-list shadow-box">  
         <div class="sen">
          <h4>CA Senators:</h4>
           <ul>
@@ -67,7 +67,7 @@
     
     	<p> Note that the next elections will be held with the new Congressional-district boundaries determined by <a href="https://www.sos.ca.gov/elections/california-redistricting" target="_blank" rel="noopener noreferrer">redistricting</a> after the 2020 Census. This affects some areas of Fremont and Milpitas, and changes the number of CA-15.  You will continue to have your current Representative until the new Congress is sworn in next January, but will vote in your new district.</p>
    		<p> If you'd like to see if your district will change, try this <a href="https://www.latimes.com/projects/california-congressional-district-map-2021/" target="_blank" rel="noopener noreferrer"> L.A. Times article</a>.</p>
-    <div class="redist-maps">
+    <div class="redist-maps shadow-box">
       	<div class="picture-map-now">
        	 <h4 style="text-align:center;">Current map </h4>    
          <img src="images/CA-15-map.jpg" id="image-now" alt="map of current boundaries of CA17 and 15"/>
