--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -128,5 +128,36 @@
         </div>
       </div>
     </div>
+
+    <div class="page-footer columns">
+      <div class="col">
+        <div class="social-media">
+          <h3>Social Media</h3>
+          <p>
+          <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
+            <ion-icon name="logo-facebook"></ion-icon>
+          </a>
+          <a class="inst-icon" href="https://www.instagram.com/cclsve/" target="_blank">
+            <ion-icon name="logo-instagram"></ion-icon></a>
+          </p>
+          <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+          <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        </div>
+      </div>
+      <div class="col">
+        <h3>Other CCL websites</h3>
+        <ul>
+          <li><a href="http://citizensclimatelobby.org/">Citizens' Climate Lobby</a></li>
+          <li><a href="https://community.citizensclimate.org/">CCL Community</a></li>
+          <li><a href="https://community.citizensclimate.org/groups/home/1321">CCL Community Silicon Valley East page</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Contact</h3>
+        <ul>
+        <li><a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></li>
+        </ul>
+      </div>
+    </div><!-- page-footer -->
   </body>
 </html>
