--- a/web/index.html
+++ b/web/index.html
@@ -47,10 +47,12 @@
         <h3 class="visually-hidden">Other resources</h3>
         <p>Volunteer web portal: <a href="https://community.citizensclimate.org/">community.citizensclimate.org</a></p>
         <p>California election information: <a href="https://www.sos.ca.gov/elections/">sos.ca.gov/elections</a></p>
+      </div>
+    </div>
+    <div class="page-footer columns">
+      <div class="col">
         <div class="social-media">
-          <p>
-            <span class="media"> Find us on Social Media: </span>
-          </p>
+          <h3>Social Media</h3>
           <p>
           <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
             <ion-icon name="logo-facebook"></ion-icon>
@@ -62,6 +64,20 @@
           <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
         </div>
       </div>
-    </div>
+      <div class="col">
+        <h3>Other CCL websites</h3>
+        <ul>
+          <li><a href="http://citizensclimatelobby.org/">Citizens' Climate Lobby</a></li>
+          <li><a href="https://community.citizensclimate.org/">CCL Community</a></li>
+          <li><a href="https://community.citizensclimate.org/groups/home/1321">CCL Community Silicon Valley East page</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Contact</h3>
+        <ul>
+        <li><a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></li>
+        </ul>
+      </div>
+    </div><!-- page-footer -->
   </body>
 </html>
