add "CCL SVE:" to title of legislative info page so that every page will indicate belonging to CCL SVE

--- a/web/elections.html
+++ b/web/elections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Legislative Info</title>
+	<title>CCL SVE: Legislative Info</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="main.css" rel="stylesheet">
 </head>
