--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -15,7 +15,7 @@
           <a href="/"><img src="images/cclsve_logo.png" alt="logo with text saying Silicon Valley East under stylized letters CCL"/></a>
           <input class="toggle-menu visually-hidden" id="toggle-menu" type="checkbox"/>
           <label class="button-toggle-menu narrow-menu" for="toggle-menu"><ion-icon name="menu-outline"/></label>
-          <div class="menu">
+          <nav class="menu">
             <ul class="header-left header-side">
               <li><a href="/">Home</a></li>
               <li><a class="current" href="/five-levers">Five Levers</a></li>
@@ -24,7 +24,7 @@
             <div class="header-right header-side">
               <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
             </div>
-          </div>
+          </nav>
         </div>
       </div>
     </div>
