specify language to improve accessibility

--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>CCL SVE: Five Levers</title>
     <link href="main.css" rel="stylesheet">
