adjust header numbering to achieve sequentially-descending header elements, for accessibility

--- a/web/index.html
+++ b/web/index.html
@@ -26,10 +26,12 @@
       </div>
     </div>
     <div class="page-title">
-      <h1>Citizens' Climate Lobby</h1>
-      <h2>Silicon Valley East</h2>
+      <h1>
+        Citizens' Climate Lobby<br/>
+        <span class="subtitle">Silicon Valley East</span>
+      </h1>
     </div><!-- page-title -->
-    <h3 class="visually-hidden">Introduction</h3>
+    <h2 class="visually-hidden">Introduction</h2>
     <div class="picture-frame picture-frame-left">
       <img src="images/chapter_meeting_photo.jpg" alt="photo of three women having a discussion while sitting at a table with food"/>
       <div class="picture-adjacent">
@@ -40,11 +42,11 @@
     </div>
     <div class="body-text">
       <div class="call-to-action">
-        <h3>Want to help right now?</h3>
+        <h2>Want to help right now?</h2>
         <p>Take action in 5 minutes for climate solutions: <a href="https://cclusa.org/take-action">cclusa.org/take-action</a>.</p>
       </div>
       <div class="other-resources">
-        <h3 class="visually-hidden">Other resources</h3>
+        <h2 class="visually-hidden">Other resources</h2>
         <p>Volunteer web portal: <a href="https://community.citizensclimate.org/">community.citizensclimate.org</a></p>
         <p>California election information: <a href="https://www.sos.ca.gov/elections/">sos.ca.gov/elections</a></p>
       </div>
@@ -52,7 +54,7 @@
     <div class="page-footer columns">
       <div class="col">
         <div class="social-media">
-          <h3>Social Media</h3>
+          <h2>Social Media</h2>
           <p>
           <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
             <ion-icon name="logo-facebook"></ion-icon>
@@ -65,7 +67,7 @@
         </div>
       </div>
       <div class="col">
-        <h3>Other CCL websites</h3>
+        <h2>Other CCL websites</h2>
         <ul>
           <li><a href="http://citizensclimatelobby.org/">Citizens' Climate Lobby</a></li>
           <li><a href="https://community.citizensclimate.org/">CCL Community</a></li>
@@ -73,7 +75,7 @@
         </ul>
       </div>
       <div class="col">
-        <h3>Contact</h3>
+        <h2>Contact</h2>
         <ul>
         <li><a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></li>
         </ul>
