adjust alt text so it flows better on a screen reader

--- a/web/elections.html
+++ b/web/elections.html
@@ -39,7 +39,7 @@
 	   
       <p> At CCL we strive to develop relationships with the people who represent us in government, and often call and write their offices to keep climate change at the top of their minds.</p>
     <div class="upcoming">
-      <img src="images/Vote-zoom.jpg" id="image-vote" alt="Four people on a zoom screen, holding the letters V,O,T and E"/>   
+      <img src="images/Vote-zoom.jpg" id="image-vote" alt="Screenshot of four people on a zoom screen, holding the letters V,O,T and E"/>   
       <h2 span style="color:#5A7931;"> Upcoming Elections</h2>   
       <p> The <a href="https://www.sos.ca.gov/elections/upcoming-elections/primary-election-june-7-2022" target="_blank" rel="noopener noreferrer">next statewide election</a> is the statewide direct primary on June 7, 2022.  Deadline for <a href= "https://registertovote.ca.gov" target="_blank" rel="noopener noreferrer">registering</a> is May 23, 2022.</p>
       <p> More information at the California Secretary of State Website: <a href="https://www.sos.ca.gov/elections" target="_blank" rel="noopener noreferrer">sos.ca.gov/elections</a></p>
