--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -44,13 +44,13 @@
           <p>CCL is all about building relationships, and it even empowers us to build relationships with our members of Congress!</p>
         </div>
         <div class="picture-frame picture-frame-left">
-          <img src="images/lobby_meeting_with_ro_khanna.jpg" alt="A dozen people seated around a table in a meeting room, including Representative Ro Khanna"/>
+          <img src="images/lobby_meeting_with_ro_khanna.jpg" alt="Photo of a dozen people seated around a table in a meeting room, including Representative Ro Khanna"/>
           <div class="picture-adjacent">
             <p>We meet regularly with our members of Congress.  All CCL volunteers are welcome and encouraged to participate in lobby meetings; the only requirement is to complete the <a href="https://community.citizensclimate.org/resources/item/19/395">Climate Advocate Training</a> first.</p>
           </div>
         </div>
         <div class="picture-frame picture-frame-right">
-          <img src="images/khanna_town_hall.jpg" alt="two constituents standing next to Representative Ro Khanna"/>
+          <img src="images/khanna_town_hall.jpg" alt="Photo of two constituents standing next to Representative Ro Khanna"/>
           <div class="picture-adjacent">
             <p>When our elected representatives host town hall meetings, we make a point of showing up and asking about climate change.  Sometimes we even get to take a picture with the representative!</p>
           </div>
@@ -61,15 +61,15 @@
           <h2 id="media">Media relations</h2>
         </div>
         <div class="picture-frame picture-frame-left">
-          <img src="images/lte.jpg" alt="a section of a newspaper showing a letter to the editor entitled Price on Carbon must be part of this year's climate legislation"/>
+          <img src="images/lte.jpg" alt="Photo of a section of a newspaper showing a letter to the editor entitled Price on Carbon must be part of this year's climate legislation"/>
           <div class="picture-adjacent">
             <p>CCL volunteers write letters to the editor relating current events and articles to climate solutions, and we often get published!  Here in Silicon Valley East, we most commonly write to the Mercury News and the East Bay Times, and we sometimes also write to smaller papers such as the Tri-City Voice.  This is a great way to get our climate message in front of thousands of local readers.</p>
             <p>And of course, CCL offers training.  Silicon Valley East chapter members can join our work meetings (scheduled in between chapter meetings) for training customized for our local papers.  CCL Community also has a <a href="https://community.citizensclimate.org/resources/item/19/111">resource page</a> for letter-writers.</p>
           </div>
         </div>
         <div class="picture-frame picture-frame-right">
-          <img src="images/facebook_screenshot.jpg" alt="screenshot from facebook showing a post about the Fremont Climate Solutions Ambassador Program"/>
-          <img src="images/instagram_screenshot.jpg" alt="screenshot from Instagram showing nine thumbnail posts"/>
+          <img src="images/facebook_screenshot.jpg" alt="Screenshot from facebook showing a post about the Fremont Climate Solutions Ambassador Program"/>
+          <img src="images/instagram_screenshot.jpg" alt="Screenshot from Instagram showing nine thumbnail posts"/>
           <div class="picture-adjacent">
             <p>We use social media to share chapter activities, local climate action opportunities, and interesting articles and videos related to climate change.</p>
           </div>
@@ -80,19 +80,19 @@
           <h2 id="grassroots">Grassroots outreach</h2>
         </div>
         <div class="picture-frame picture-frame-left">
-          <img src="images/tabling_hayward.jpg" alt="two women wearing face coverings standing behind a table that has a sign that says 'Solve Climate Change' and a tablecloth that says 'Citizens Climate'"/>
+          <img src="images/tabling_hayward.jpg" alt="Photo of two women wearing face coverings standing behind a table that has a sign that says 'Solve Climate Change' and a tablecloth that says 'Citizens Climate'"/>
           <div class="picture-adjacent">
             <p>We go out into the community to spread the word about climate solutions and how to get involved with CCL.  Here we are at the Hayward farmer's market.</p>
           </div>
         </div>
         <div class="picture-frame picture-frame-right">
-          <img src="images/tabling_earth_day.png" alt="a young man standing next to a table with a tablecloth that says 'Citizens Climate Lobby' with green grass and trees in the background"/>
+          <img src="images/tabling_earth_day.png" alt="Photo of a young man standing next to a table with a tablecloth that says 'Citizens Climate Lobby' with green grass and trees in the background"/>
           <div class="picture-adjacent">
             <p>Sometimes we get to table in gorgeous spaces!  This was the Alum Rock Earth Day celebration.</p>
           </div>
         </div>
         <div class="picture-frame picture-frame-left">
-          <img src="images/presentation.jpg" alt="a man facing an audience with a slideshow slide that says Citizens' Climate Lobby"/>
+          <img src="images/presentation.jpg" alt="Photo of a man facing an audience with a slideshow slide that says Citizens' Climate Lobby"/>
           <div class="picture-adjacent">
             <p>Grassroots outreach also includes giving presentations.  CCL offers training and support for people who want to learn how to give a good presentation about climate change.  We connect with other groups in our local community who want to hear about our work, and we offer to give presentations to their members.</p>
           </div>
@@ -103,7 +103,7 @@
           <h2 id="grasstops">Grasstops outreach</h2>
         </div>
         <div class="picture-frame picture-frame-right">
-          <img src="images/endorsement_request.png" alt="screenshot showing text of an email proposing that a city endorses climate legislation"/>
+          <img src="images/endorsement_request.png" alt="Screenshot showing text of an email proposing that a city endorses climate legislation"/>
           <div class="picture-adjacent">
             <p>Part of CCL's strategy is for local leaders to voice their support for climate solutions in general and for the Energy Innovation and Carbon Dividend Act in particular.  Our chapter hasn't made quite as much progress here as with some of the other levers, but this screenshot of an email to a councilmember shows that we're working on it.</p>
           </div>
@@ -115,13 +115,13 @@
           <p>We meet monthly on the 2nd Saturday of the month at 4 PM.  We offer an orientation for new members at 3:30 PM before every chapter meeting.</p>
         </div>
         <div class="picture-frame picture-frame-left">
-          <img src="images/chapter_meeting_photo.jpg" alt="three women having a discussion while sitting at a table with food"/>
+          <img src="images/chapter_meeting_photo.jpg" alt="Photo of three women having a discussion while sitting at a table with food"/>
           <div class="picture-adjacent">
             <p>Before the COVID pandemic started, we used to meet in person for our chapter meetings.  Here's a photo from back then to show how much fun we are in person!</p>
           </div>
         </div>
         <div class="picture-frame picture-frame-right">
-          <img src="images/2022_january_work_party.png" alt="zoom screenshot with a grid of four photos, each showing a person's head and torso"/>
+          <img src="images/2022_january_work_party.png" alt="Screenshot of a Zoom conference call showing a grid of four photos, each showing a person's head and torso"/>
           <div class="picture-adjacent">
             <p>Most months, we schedule a work party in between our monthly meetings.  Members can choose to attend to get training from chapter leaders or to work on CCL tasks.</p>
           </div>
