--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -125,6 +125,12 @@
           </div>
         </div>
         <div class="picture-frame picture-frame-right">
+          <img src="images/sve_outdoor_meeting.jpg" alt="Photo of five people sitting around a table at a park"/>
+          <div class="picture-adjacent">
+            <p>This was our March 2022 meeting, our first in-person meeting after two years of virtual chapter meetings!  We met outdoors to keep the COVID risk low.  We're planning to do a hybrid approach going forward with some vitural meetings and some in-person meetings, so that we can balance the convenience of meeting online with the stronger connections we build in person.</p>
+          </div>
+        </div>
+        <div class="picture-frame picture-frame-left">
           <img src="images/2022_january_work_party.png" alt="Screenshot of a Zoom conference call showing a grid of four photos, each showing a person's head and torso"/>
           <div class="picture-adjacent">
             <p>Most months, we schedule a work party in between our monthly meetings.  Members can choose to attend to get training from chapter leaders or to work on CCL tasks.</p>
