--- a/web/activities.html
+++ b/web/activities.html
@@ -54,7 +54,7 @@
 	      
      <h3> Town Halls </h3>
        	 <p> Attending town halls and asking climate-related questions serves both to demonstrate our concern to the Representative and to foster awareness among other community attendees.</p> 
-	 <p>To find out about upcoming town halls, sign up for their mailing list (<a href= "https://khanna.house.gov/contact/newsletter" target="_blank">Ro Khanna</a>, <a href= "https://swalwell.house.gov/contact/newsletter" target="_blank">Eric Swalwell</a>)	  
+	 <p>To find out about upcoming town halls, sign up for your Rep's mailing list (<a href= "https://khanna.house.gov/contact/newsletter" target="_blank"> Ro Khanna</a>, <a href= "https://swalwell.house.gov/contact/newsletter" target="_blank">Eric Swalwell</a>)	  
 	  
      <h3> Other events </h3>
      <p> We occasionally have other tabling opportunities, workshops or special events.  To be notified of those, it is best to join the chapter and get in our active-member google group.</p>
