--- a/web/activities.html
+++ b/web/activities.html
@@ -53,11 +53,11 @@
       	 <p> CCLers from all over the country (and the world!) get together every year for a conference and lobby effort.  This year we are still lobbying virtually because of tightened security at the capitol, but the conference will be in person for the first time since COVID.  It is valuable and inspiring to meet with so many volunteers and exchange ideas and viewpoints.  More information on <a href="https://citizensclimatelobby.org/climate-change-conferences/" target="_blank">CCL's conference page</a>.
 	      
      <h3> Town Halls </h3>
-       	 <p> Attending town halls and asking climate-related questions serves both to demonstrate our concern to the Representative and to foster awareness among other community attendees.</p> 
-	 <p>To find out about upcoming town halls, sign up for your Rep's mailing list (<a href= "https://khanna.house.gov/contact/newsletter" target="_blank"> Ro Khanna</a>, <a href= "https://swalwell.house.gov/contact/newsletter" target="_blank">Eric Swalwell</a>)	  
+       	 <p> Attending town halls and asking climate-related questions serves both to demonstrate our concern to the Representative and to foster awareness among other community attendees. 
+	 <p>To find out about upcoming town halls, sign up for your Rep's mailing list (<a href= "https://khanna.house.gov/contact/newsletter" target="_blank">Ro Khanna</a>, <a href= "https://swalwell.house.gov/contact/newsletter" target="_blank"> Eric Swalwell</a>).</p>	  
 	  
      <h3> Other events </h3>
-     <p> We occasionally have other tabling opportunities, workshops or special events.  To be notified of those, it is best to join the chapter and get in our active-member google group.</p>
+     <p> We occasionally have other tabling opportunities, workshops or special events.  To be notified of those, it is best to join the chapter and sign up for our active-member Google group.</p>
   </div> 
   
 </body>
