Update Grasstops item to be TCDF endorsement

--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -107,9 +107,9 @@
           <h2 id="grasstops">Grasstops outreach</h2>
         </div>
         <div class="picture-frame picture-frame-right">
-          <img src="images/endorsement_request.png" alt="Screenshot showing text of an email proposing that a city endorses climate legislation"/>
+          <img src="images/tcdf_endorsement.jpg" alt="Logo of Tri City Dems annotated showing they have endorsed EICDA"/>
           <div class="picture-adjacent">
-            <p>Part of CCL's strategy is for local leaders to voice their support for climate solutions in general and for the Energy Innovation and Carbon Dividend Act in particular.  Our chapter hasn't made quite as much progress here as with some of the other levers, but this screenshot of an email to a councilmember shows that we're working on it.</p>
+            <p>Part of CCL's strategy is for local leaders to voice their support for climate solutions in general and for the Energy Innovation and Carbon Dividend Act in particular.  Our local Tri City Democratic Forum has voted to endorse the Energy Innovation and Carbon Dividend Act after hearing a presentation from our CCL chapter.</p>
           </div>
         </div>
       </div>
