--- a/web/events.html
+++ b/web/events.html
@@ -18,7 +18,8 @@
             <ul class="header-left header-side">
               <li><a href="/">Home</a></li>
               <li><a href="/five-levers">Five Levers</a></li>
-              <li><a class="current" href="/elections">Elections</a></li>
+	      <li><a href="/elections">Elections</a></li>		    
+	      <li><a class="current" href="events">Events</a></li>
             </ul>
             <div class="header-right header-side">
               <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
