--- a/web/five-levers.html
+++ b/web/five-levers.html
@@ -24,6 +24,7 @@
               <li><a href="/">Home</a></li>
               <li><a class="current" href="/five-levers">Five Levers</a></li>
               <li><a href="/elections">Elections</a></li>
+              <li><a href="/events">Events</a></li>
             </ul>
             <div class="header-right header-side">
               <div class="button"><a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">Join CCL</a></div>
