--- a/web/events.html
+++ b/web/events.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>CCL SVE: Events</title>
 	<link href="main.css" rel="stylesheet">
@@ -32,7 +32,7 @@
     <div class="page-title">
       <h1>Event/Activity Information</h1>
     </div> 
-      <h3 class="visually-hidden">Introduction</h3> 
+      <h2 class="visually-hidden">Introduction</h2> 
   <div class="page-main-events">
   	<p> We have a few regularly scheduled events every month.   If you <a href="https://citizensclimatelobby.org/join-citizens-climate-lobby/" target="_blank">join CCL</a> you will be added to our Chapter mailing list and get e-mailed announcements of upcoming Chapter meetings.  You can then also join our Google groups for interim updates and notifications. </p>
 
