--- a/web/events.html
+++ b/web/events.html
@@ -62,6 +62,35 @@
      <h3> Other events </h3>
      <p> We occasionally have other tabling opportunities, workshops or special events.  To be notified of those, it is best to join the chapter and sign up for our active-member Google group.</p>
   </div> 
-  
+   <div class="page-footer columns">
+      <div class="col">
+        <div class="social-media">
+          <h2>Social Media</h2>
+          <p>
+          <a class="fb-icon" href="https://www.facebook.com/CCLSVE/" target="_blank">
+            <ion-icon name="logo-facebook"></ion-icon>
+          </a>
+          <a class="inst-icon" href="https://www.instagram.com/cclsve/" target="_blank">
+            <ion-icon name="logo-instagram"></ion-icon></a>
+          </p>
+          <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+          <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        </div>
+      </div>
+      <div class="col">
+        <h2>Other CCL websites</h2>
+        <ul>
+          <li><a href="http://citizensclimatelobby.org/">Citizens' Climate Lobby</a></li>
+          <li><a href="https://community.citizensclimate.org/">CCL Community</a></li>
+          <li><a href="https://community.citizensclimate.org/groups/home/1321">CCL Community Silicon Valley East page</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h2>Contact</h2>
+        <ul>
+        <li><a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></li>
+        </ul>
+      </div>
+    </div><!-- page-footer -->
 </body>
 </html>
