update "next election" information, since the primary has passed

--- a/web/elections.html
+++ b/web/elections.html
@@ -46,7 +46,7 @@
     <div class="upcoming">
       <img src="images/Vote-zoom.jpg" id="image-vote" alt="Screenshot of four people on a zoom screen, holding the letters V,O,T and E"/>   
       <h2 span style="color:#5A7931;"> Upcoming Elections</h2>   
-      <p> The <a href="https://www.sos.ca.gov/elections/upcoming-elections/primary-election-june-7-2022" target="_blank" rel="noopener noreferrer">next statewide election</a> is the statewide direct primary on June 7, 2022.  Deadline for <a href= "https://registertovote.ca.gov" target="_blank" rel="noopener noreferrer">registering</a> is May 23, 2022.</p>
+      <p> The <a href="https://www.sos.ca.gov/elections/upcoming-elections/general-election-nov-8-2022" target="_blank" rel="noopener noreferrer">next national election</a> is the general election on November 8, 2022.  Deadline for <a href= "https://registertovote.ca.gov" target="_blank" rel="noopener noreferrer">registering</a> is October 24, 2022.</p>
       <p> More information at the California Secretary of State Website: <a href="https://www.sos.ca.gov/elections" target="_blank" rel="noopener noreferrer">sos.ca.gov/elections</a></p>
     </div> <!--upcoming-->  
       
