update footer so that "other CCL websites" links open in new tabs

--- a/web/elections.html
+++ b/web/elections.html
@@ -107,9 +107,9 @@
       <div class="col">
         <h2>Other CCL websites</h2>
         <ul>
-          <li><a href="http://citizensclimatelobby.org/">Citizens' Climate Lobby</a></li>
-          <li><a href="https://community.citizensclimate.org/">CCL Community</a></li>
-          <li><a href="https://community.citizensclimate.org/groups/home/1321">CCL Community Silicon Valley East page</a></li>
+          <li><a href="http://citizensclimatelobby.org/" target="_blank">Citizens' Climate Lobby</a></li>
+          <li><a href="https://community.citizensclimate.org/" target="_blank">CCL Community</a></li>
+          <li><a href="https://community.citizensclimate.org/groups/home/1321" target="_blank">CCL Community Silicon Valley East page</a></li>
         </ul>
       </div>
       <div class="col">
