simpler google maps link; let's see if this works betters

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -22,7 +22,7 @@
         <p>10 AM - 2 PM</p>
       </div>
       <div class="detail where">
-        <a href="https://www.google.com/maps/place/37°32'46.4%22N+121°57'52.5%22W/@37.5462095,-121.966783,758m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x99716dbc82c2bc02!8m2!3d37.5462095!4d-121.9645943?hl=en-US">
+        <a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic">
           <h2>At Lake Elizabeth</h2>
           <p>behind the performance pavilion</p>
         </a>
