--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -37,7 +37,15 @@
           <p>@ 10:00 AM</p>
           <p>@ 11:30 AM</p>
         </div>
-      </div>
-    </div>
+        <div class="detail organizations">
+          <h2>Featuring local environmental groups</h2>
+          <div class="logos">
+            <a href="https://cclsve.org" target="_blank">
+              <img src="images/cclsve_logo.png" alt="Citizens' Climate Lobby Silicon Valley East"/>
+            </a>
+          </div><!-- logos -->
+        </div><!-- detail organizations -->
+      </div><!-- details -->
+    </div><!-- content -->
   </body>
 </html>
