update splash page: add map

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -26,11 +26,17 @@
           <p>10 AM - 2 PM</p>
         </div>
         <div class="detail where">
-          <a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic">
-            <h2>At Lake Elizabeth</h2>
+          <div class="where-info">
+            <h2>Fremont, California<br/>
+             Lake Elizabeth</h2>
             <p>behind the performance pavilion</p>
-          </a>
-        </div>
+          </div><!-- where-info -->
+          <div class="where-info map-image">
+            <a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic" target="_blank">
+              <img src="images/earth_day_map_with_photo.png" alt="map showing the area behind the pavilion next to Lake Elizabeth, with a photo showing an image of the area including grass and trees behind a sidewalk"/>
+            </a>
+          </div><!-- where-info -->
+        </div><!-- detail where -->
         <div class="detail walks">
           <h2>Walk &amp; talk about climate</h2>
           <p>Casual walks around Lake Elizabeth</p>
