add contact email to earth day splash page

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -52,6 +52,9 @@
           </div><!-- logos -->
         </div><!-- detail organizations -->
       </div><!-- details -->
+      <div class="contact">
+        <p>Questions?  Email us: <a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></p>
+      </div><!-- contact -->
     </div><!-- content -->
   </body>
 </html>
