update earth day splash page to include Mary's suggestions and add directions to encourage people to bike/transit/walk there

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -27,9 +27,14 @@
         </div>
         <div class="detail where">
           <div class="where-info">
-            <h2>Fremont, California<br/>
-             Lake Elizabeth</h2>
-            <p>behind the performance pavilion</p>
+            <div class="address">
+              <h2>Lake Elizabeth</h2>
+              <p>40000 Paseo Padre Pkwy</p>
+              <p>Fremont, California 94538</p>
+            </div><!-- address -->
+            <div class="location-detail">
+              <p><a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic" target="_blank">behind the performance pavilion</a></p>
+            </div><!-- location-detail -->
           </div><!-- where-info -->
           <div class="where-info map-image">
             <a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic" target="_blank">
@@ -39,7 +44,7 @@
         </div><!-- detail where -->
         <div class="detail walks">
           <h2>Walk &amp; talk about climate</h2>
-          <p>Casual walks around Lake Elizabeth</p>
+          <p>Enjoy thoughtful discussions with local environmental volunteers while walking around Lake Elizabeth.</p>
           <p>@ 10:00 AM</p>
           <p>@ 11:30 AM</p>
         </div>
@@ -51,6 +56,15 @@
             </a>
           </div><!-- logos -->
         </div><!-- detail organizations -->
+        <div class="detail directions">
+          <h2>Directions</h2>
+          <p><a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic" target="_blank">Location on Google Maps</a></p>
+          <ul>
+            <li><a href="https://goo.gl/maps/9CjiHtFs667xTQYE7" target="_blank">25-minute walk from Fremont BART</a></li>
+            <li><a href="https://goo.gl/maps/JCdyR435J3SrMyep7" target="_blank">14-minute walk from Fremont & Mission View bus stop</a>, served by AC Transit buses <a href="https://www.actransit.org/bus-lines-schedules/210" target="_blank">210</a> and <a href="https://www.actransit.org/bus-lines-schedules/212" target="_blank">212</a></li>
+            <li>The nearest bike racks in the park are located at the <a href="https://goo.gl/maps/9iLe7N2oixqiPipW7" target="_blank">Age Well Center</a> and along the walking path in front of the <a href="https://goo.gl/maps/nGBqBbpFvFuenmQt6" target="_blank">Visitors Center</a>.  You are also welcome to bring your bicycle with you to the event, but we are not responsible for lost or stolen bikes.</li>
+          </ul>
+        </div><!-- detail directions -->
       </div><!-- details -->
       <div class="contact">
         <p>Questions?  Email us: <a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></p>
