earth day splash page: add link to sign up your org

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -55,6 +55,7 @@
               <img src="images/cclsve_logo.png" alt="Citizens' Climate Lobby Silicon Valley East"/>
             </a>
           </div><!-- logos -->
+          <p>Does your organization want to be part of this event? <a href="https://forms.gle/sBz7EGqypTbj21A4A" target="_blank">Sign up here!</a></p>
         </div><!-- detail organizations -->
         <div class="detail directions">
           <h2>Directions</h2>
