add election info to Earth Day event splash page

--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -66,6 +66,28 @@
             <li>The nearest bike racks in the park are located at the <a href="https://goo.gl/maps/9iLe7N2oixqiPipW7" target="_blank">Age Well Center</a> and along the walking path in front of the <a href="https://goo.gl/maps/nGBqBbpFvFuenmQt6" target="_blank">Visitors Center</a>.  You are also welcome to bring your bicycle with you to the event, but we are not responsible for lost or stolen bikes.</li>
           </ul>
         </div><!-- detail directions -->
+        <div class="detail election">
+          <h2>Election Information</h2>
+          <p>Election Day is <strong>November 8, 2022</strong>.  Mailed-in ballots must by postmarked November 8 or earlier.  The deadline to vote in person or to drop your ballot in a drop box is 8 PM on November 8.</p>
+          <p>Register to vote or check your voter registration status at <a href="http://vote.ca.gov" target="_blank">vote.ca.gov</a>.  The deadline to <a href="https://registertovote.ca.gov/" target="_blank">register to vote</a> for this election is October 24, 2022.  However, we highly recommend being registered earlier than that so that you can be sure to receive all your election materials in a timely manner.</p>
+          <p>Ballots will be mailed out to all registered California voters by October 10 and should arrive a few days after that.  You can mail in your ballot, drop it in a ballot drop box, or vote in person.  In-person voting is available for 11 days at select locations and for 4 days at the remaining locations.</p>
+          <p>Check your county's Registrar of Voters website for details about where, when, and how to vote.  Some pages on these sites may still be getting updated for the November election; be sure to check if the details apply to June or November.</p>
+          <ul>
+            <li>Alameda County: <a href="https://www.acvote.org" target="_blank">acvote.org</a>
+              <ul>
+                <li>Stay tuned for information about in-person voting at the <a href="https://acgov.org/rov_app/vcalist" target="_blank">Alameda County vote centers</a> webpate, which will be updatd with November election info when available.</li>
+                <li>24-hour ballot drop-off is available at <a href="https://www.acgov.org/rovapps/maps/ballotdropbox_map.htm" target="_blank">Alameda Country ballot drop boxes</a> from October 10 until 8 PM on November 8, 2022 (Election Day).</li>
+              </ul>
+            </li>
+            <li>Santa Clara County: <a href="https://sccvote.sccgov.org/home" target="_blank">sccvote.sccgov.org</a>
+              <ul>
+                <li>In-person voting will probably be posted at the <a href="https://sccvote.sccgov.org/vote-person/official-vote-center-list-and-schedule" target="_blank">Santa Clara County vote centers</a> webpage when available.</li>
+                <li>24-hour ballot drop-off is available at <a href="https://sccvote.sccgov.org/vote-mail/official-ballot-drop-box-sites-and-early-voting-information" target="_blank">Santa Clara County ballot drop boxes</a> from October 10 until 8 PM on November 8, 2022 (Election Day).</li>
+              </ul>
+            </li>
+          </ul>
+          <p>Voter registration forms will be available at our Earth Day event.  However, as noted, it's better to register sooner.</p>
+        </div><!-- detail election -->
       </div><!-- details -->
       <div class="contact">
         <p>Questions?  Email us: <a href="mailto:ccl.siliconvalleyeast@gmail.com">ccl.siliconvalleyeast@gmail.com</a></p>
